[project]
name = "cognite-pygen"
version = "0.0.0"
description = "Cognite Python SDK Generator"
authors = [{name="Cognite", email ="support@cognite.com"}]
readme="README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "cognite-sdk>=7.73.6, <8.0.0",
    "pydantic>=2.7.0, <2.11.0",
    "Jinja2>=3.1",
    "inflect>=6.2",
]

[project.urls]
Documentation = "https://cognite-pygen.readthedocs-hosted.com/en/latest/"
Homepage = "https://cognite-pygen.readthedocs-hosted.com/en/latest/"
Repository = "https://github.com/cognitedata/pygen"
Changelog = "https://github.com/cognitedata/pygen/releases"

[project.optional-dependencies]
cli = [
    "packaging>=21.3",
    "typer>=0.9",
    "toml>=0.10",
    "build>=1.1",
]
format = [
    "black>=24.4.2",
]
[dependency-groups]
dev = [
    "twine>=6.0.0",
    "pre-commit>=4.0.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.10.0",
    "pytest-rerunfailures>=14.0",
    "toml>=0.10",
    "pandas>=1.5.3",
    "mypy>=1.5.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.26",
    "mkdocs-jupyter>=0.24.7",
    "mkdocs-glightbox>=0.4.0",
    "mkdocstrings-python>=1.10.3",
    "pandas-stubs>=2",
    "typer>=0.12",
    "types-PyYAML>=6",
    "types-toml>=0.10",
    "IPython>=8.0.0",
    "matplotlib>=3.5.0",
    "tabulate>=0.8.9",
    "pytest-icdiff>=0.8",
    "Faker>=18.0.0",
    "hypothesis>=6.0.0",
    "jupyterlab>=3.0.0",
    "cognite-toolkit==0.5.16",
    "marko>=2.1.0, <3.0.0",
]

[tool.uv]
package = true

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.py$'

[tool.ruff]
# See https://beta.ruff.rs/docs/rules for an overview of ruff rules
line-length = 120
target-version = "py310"
exclude = ["examples", "scripts"]
fix = true

[tool.ruff.lint]
select = ["E","W","F","I","RUF","TID","UP", "B", "FLY", "PTH", "ERA"]
fixable = ["E","W","F","I","RUF","TID","UP", "B", "FLY", "PTH", "ERA"]
ignore = [
    # This is causing issues for pydantic which does not support use of X | Y for type annotations before 3.10
    "UP007", # Use X | Y for type annotations
    # Typer do function calls when setting up the CLI.
    "B008", # Do not perform function call {name} in argument defaults
    # This is done when setting the pygen configs, and useful for getting pretty docs.
    # In that case, this is also safe as the function calls produced immutable data.
    "RUF009", #Do not perform function call in defaults
]

[tool.ruff.lint.isort]
known-first-party = []
known-third-party = ["cognite.client"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "examples"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pygen]
data_models = [
    ["IntegrationTestsImmutable", "Movie", "2"],
]
tenant_id = "<tenant-id>"
client_id = "<client-id>"
cdf_cluster = "<cdf-cluster>"
cdf_project = "<cdf-project>"
top_level_package = "movie_domain.client"
client_name = "MovieClient"
output_dir = "docs/examples"
instance_space = "move_data"

[project.scripts]
pygen = "cognite.pygen.cli:main"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
]
addopts = "--doctest-modules"
markers = [
    "full: Requiers all optional dependencies to run.",
]
pythonpath = [".", "examples", "examples-pydantic-v1"]
testpaths = ["tests", "cognite/pygen"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cognite"]
